# cloud-playground

./: .gitignore  Makefile  README.md  create  destroy  test
.github/workflows/: ci.yaml
cli/: .golangci.yaml  Dockerfile  Makefile  go.mod  go.sum  main.go  main_test.go
cli/helm/: Chart.yaml  values.yaml
cli/helm/templates/: job.yaml  secret.yaml  secretproviderclass.yaml  serviceaccount.yaml
cli/load/: load.go  load_test.go
cli/message/: message.go  message_test.go
dynamo/: .golangci.yaml  Dockerfile  Makefile  go.mod  go.sum  main.go  main_test.go
dynamo/helm/: Chart.yaml  values.yaml
dynamo/helm/templates/: deployment.yaml  horizontalpodautoscaler.yaml  poddisruptionbudget.yaml  prometheusrule.yaml  secretproviderclass.yaml  service.yaml
dynamo/item/: item.go  item_test.go
dynamo/k6/: script.js
dynamo/opentelemetry/: opentelemetry.go  opentelemetry_test.go
dynamo/prometheus/: prometheus.go  prometheus_test.go
dynamo/proto/item/: item.pg.proto
dynamo/test/: common.go
gateway/: .golangci.yaml  Dockerfile  Makefile  go.mod  go.sum  main.go  main_test.go
gateway/helm/: Chart.yaml  values.yaml
gateway/helm/templates/: analysistemplate.yaml  deployment.yaml  horizontalpodautoscaler.yaml  ingress.yaml  ingressgateway.yaml  issuer.yaml  prometheusrule.yaml  rollout.yaml  secret.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml  servicedefaults.yaml  serviceresolver.yaml  servicerouter.yaml  servicesplitter.yaml
gateway/item/: item.go  item_test.go
gateway/k6/: script.js
gateway/message/: message.go  message_test.go
gateway/object/: object.go  object_test.go
gateway/opentelemetry/: opentelemetry.go
gateway/prometheus/: prometheus.go  prometheus_test.go
s3/: .golangci.yaml  Dockerfile  Makefile  go.mod  go.sum  main.go  main_test.go
s3/helm/: Chart.yaml  values.yaml
s3/helm/templates/: deployment.yaml  horizontalpodautoscaler.yaml  prometheusrule.yaml  secret.yaml  secretproviderclass.yaml  service.yaml  servicemonitor.yaml
s3/k6/: script.js
s3/object/: object.go  object_test.go
s3/opentelemetry/: opentelemetry.go
s3/prometheus/: prometheus.go  prometheus_test.go
s3/proto/object/: object.pg.proto
s3/test/: common.go
sql/: Cargo.toml  Dockerfile  Makefile
sql/helm/: Chart.yaml  values.yaml
sql/helm/templates/: deployment.yaml  horizontalpodautoscaler.yaml  ingress.yaml  issuer.yaml  poddisruptionbudget.yaml  prometheusrule.yaml  secret.yaml  service.yaml  servicemonitor.yaml
sql/k6/: script.js
sql/migrations/mysql/: 1_message.sql  1_users.sql  2_messages.sql
sql/migrations/postgres/: 1_message.sql  1_users.sql  2_messages.sql
sql/src/: error.rs  lib.rs  message.rs  metrics.rs  monitoring.rs  mysql.rs  postgres.rs  redis.rs  tracing.rs  user.rs
terraform/: .terraform.lock.hcl  README.md  buckets.tf  charts.tf  config_maps.tf  helm_releases.tf  ingresses.tf  modules.tf  namespaces.tf  output.tf  outputs.tf  pets.tf  providers.tf  randoms.tf  requirements.tf  secrets.tf  services.tf  tables.tf  variables.tf
terraform/environments/consul/: .terraform.lock.hcl  README.md  modules.tf  outputs.tf  providers.tf  randoms.tf  variables.tf
terraform/environments/haproxy/: .terraform.lock.hcl  README.md  modules.tf  outputs.tf  randoms.tf
terraform/environments/nginx/: .terraform.lock.hcl  README.md  modules.tf  outputs.tf  providers.tf  requirements.tf  variables.tf
terraform/environments/redis/: .terraform.lock.hcl  README.md  modules.tf  outputs.tf  providers.tf  randoms.tf
terraform/modules/argorollouts/: README.md  helm_releases.tf  outputs.tf  variables.tf
terraform/modules/certmanager/: README.md  helm_releases.tf  requirements.tf
terraform/modules/cli/: README.md  (+8 more)
(+132 files in other folders)
