[package]
name = "sql"
version = "1.0.0"
edition = "2021"

[lib]
name = "sql"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "sql"
test = false
doc = false

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.15", features = ["default", "headers"] }
clap = { version = "4.2.2", features = ["derive", "env"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
pin-project = "1.0.12"
prometheus-client = "0.20.0"
redis = { version = "0.23.0", features = ["tokio-native-tls-comp", "cluster"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
openssl = { version = "0.10.50", features = ["vendored"] }
