[package]
name = "sql"
version = "1.0.0"
edition = "2021"

[lib]
name = "sql"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "sql"
test = false
doc = false

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["default", "headers"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
openssl = { version = "0.10.57", features = ["vendored"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
pin-project = "1.1.3"
prometheus-client = "0.20.0"
redis = { version = "0.23.3", features = ["tokio-native-tls-comp", "cluster"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
