[package]
name = "sql"
version = "1.0.0"
edition = "2021"

[lib]
name = "sql"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "sql"
test = false
doc = false

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["default"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
openssl = { version = "0.10.61", features = ["vendored"] }
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14.0"
opentelemetry-semantic-conventions = "0.13.0"
pin-project = "1.1.3"
prometheus-client = "0.22.0"
redis = { version = "0.24.0", features = ["tokio-native-tls-comp", "cluster"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
